[package]
name = "sparse_poly"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-test-curves = { version = "0.3.0", features = ["bls12_381_curve"] }
ark-ff = "0.3.0"
ark-std = "0.3.0"
rayon = "1.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "sparse_poly_benchmark"
harness = false